[tool.poetry]
name = "analysis-basic-env"
version = "0.1.0"
description = "DIG Insightチームのアナリスト向け分析環境テンプレート"
authors = ["msakai <masayuki.sakai@nex.nikkei.com>"]
readme = "README.md"
packages = [{include = "analysis_basic_env", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25"
pandas = "^2"
scipy = "^1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
beautifulsoup4 = "^4.12.2"
bokeh = "^3.3.0"
fastdtw = "^0.3.4"
gensim = "^4.3.2"
google-api-core = "^2.12.0"
google-api-python-client = "^2.103.0"
google-auth = "^2.23.3"
google-cloud-bigquery = "^3.12.0"
google-cloud-storage = "^2.12.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.1"
imbalanced-learn = "^0.11.0"
ipython = "^8.16.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.7"
kaggle = "^1.5.16"
lightgbm = "^4.1.0"
pathlib = "^1.0.1"
pillow = "^10.0.1"
pytest = "^7.4.2"
python-utils = "^3.8.1"
spacy = "^3.7.1"
sphinx = "^7.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
